--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP1LacCNjDEaZwwaFwIxAc",
+      "authorship_tag": "ABX9TyM7xauCGkatgsKi14TL8RlL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
       "source": [
         "### Iteration 1\n",
         "\n",
-        "Understanding the basics of the problem"
+        "Understanding the basics of the problem. We lay the foundations of understanding this problem brick by brick."
       ],
       "metadata": {
         "id": "_iczEtD3tjq-"
@@ -119,12 +119,22 @@
         "#### Problem Identification\n",
         "\n",
         "\n",
-        "*   11 Bus Transit Routes\n",
-        "*   3 Railway Transit Lines\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "Gr3CDpZQtqUX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have:\n",
+        "*   11 Bus Transit Routes\n",
+        "*   3 Railway Transit Lines"
+      ],
+      "metadata": {
+        "id": "4kHK_P2vHkHy"
       }
     },
     {
@@ -140,9 +150,9 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "\n",
-        "*   Identifying all bus stops for each bus transit route\n",
-        "*   Identifying all stations for each railway transit line\n"
+        "To break down the problem into subproblems:\n",
+        "*   Identify all bus stops for each bus transit route\n",
+        "*   Identify all stations for each railway transit line\n"
       ],
       "metadata": {
         "id": "TIxNBPFPxZzB"
@@ -160,7 +170,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
+        "Related solutions to draw on:\n",
         "\n",
         "*   Bus stops within a bus route are more frequent than train stations within a train line\n",
         "*   Some bus routes have similar paths to train lines\n",
@@ -183,7 +193,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*   Determining"
+        "How to abstract this problem? </br>\n",
+        "Just focus on:\n",
+        "*   Determining the starting point and destination point\n",
+        "*   Determining what bus stops or stations are within reach of your starting point"
       ],
       "metadata": {
         "id": "8uUYYozsBpF7"
@@ -201,10 +214,32 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Now that we have identified the components for the problem, we \"glue\" them together.\n",
+        "This iteration maps the connections between the routes and determines the cost involved in terms of currency and time"
+      ],
+      "metadata": {
+        "id": "NKnWH24zHv8K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Problem Identification"
       ],
       "metadata": {
         "id": "bigjVWOxuB3_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finding the most efficient route and determining fare between designated points. The efficient route can either:\n",
+        "* use bus routes only\n",
+        "* use train lines only\n",
+        "* use both bus routes and train lines"
+      ],
+      "metadata": {
+        "id": "xRAC-gloHiCi"
       }
     },
     {
@@ -219,6 +254,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "* Identify all possible routes between starting and destination points\n",
+        "* determine which routes require transfers between buses and/or trains\n",
+        "* calculate travel time for each route (inncluding transfer time if applicable)\n",
+        "* calculate fare costs (distance-based)"
+      ],
+      "metadata": {
+        "id": "qXdXOaScIW7c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Pattern Recognition"
       ],
       "metadata": {
@@ -228,10 +275,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "* longer routes = higher fares\n",
+        "* more stops = higher fares\n",
+        "* some routes have faster travel time\n",
+        "* some routes require less transfers\n",
+        "* some routes are cheaper"
+      ],
+      "metadata": {
+        "id": "ibWHv8RZLPhc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Abstraction"
       ],
       "metadata": {
         "id": "t66aOhPsuB3_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* classifying routes based on whether they use bus only, train only, or both\n",
+        "* determine pricing\n",
+        "* determine travel time"
+      ],
+      "metadata": {
+        "id": "UjHvt2ZXLqN1"
       }
     },
     {
