--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7xauCGkatgsKi14TL8RlL",
+      "authorship_tag": "ABX9TyPr8KoclkHvaWevKtHPxB3l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,8 @@
         "\n",
         "To break down the problem into subproblems:\n",
         "*   Identify all bus stops for each bus transit route\n",
-        "*   Identify all stations for each railway transit line\n"
+        "*   Identify all stations for each railway transit line\n",
+        "* Determine connections between bus routes and/or train lines to identify transfer points"
       ],
       "metadata": {
         "id": "TIxNBPFPxZzB"
@@ -174,7 +175,7 @@
         "\n",
         "*   Bus stops within a bus route are more frequent than train stations within a train line\n",
         "*   Some bus routes have similar paths to train lines\n",
-        "*   Some train stations are near to bus stops\n",
+        "*   Some train stations are near to bus stops, so transfer points may be present here\n",
         "\n"
       ],
       "metadata": {
@@ -215,7 +216,7 @@
       "cell_type": "markdown",
       "source": [
         "Now that we have identified the components for the problem, we \"glue\" them together.\n",
-        "This iteration maps the connections between the routes and determines the cost involved in terms of currency and time"
+        "This iteration maps the connections between the routes and determines the cost involved in terms of currency and time to analyze time and cost trade-offs"
       ],
       "metadata": {
         "id": "NKnWH24zHv8K"
@@ -233,7 +234,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finding the most efficient route and determining fare between designated points. The efficient route can either:\n",
+        "Finding the most favorable route and determining fare between designated points. The favorable route can either:\n",
         "* use bus routes only\n",
         "* use train lines only\n",
         "* use both bus routes and train lines"
@@ -275,11 +276,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* longer routes = higher fares\n",
-        "* more stops = higher fares\n",
-        "* some routes have faster travel time\n",
-        "* some routes require less transfers\n",
-        "* some routes are cheaper"
+        "* longer routes (in terms of time) = higher fares\n",
+        "* more stops = longer travel time\n",
+        "* some routes have faster travel time, despite more stops\n",
+        "* some routes are cheaper, but takes longer\n",
+        "* transfers affect travel time, but no penalty at fare cost"
       ],
       "metadata": {
         "id": "ibWHv8RZLPhc"
@@ -317,6 +318,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "This part builds the algorithm to solve the problem in an optimal manner"
+      ],
+      "metadata": {
+        "id": "O27JrWiDT7QV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Problem Identification"
       ],
       "metadata": {
@@ -326,10 +336,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Developing the algorithm to find:\n",
+        "* fastest path\n",
+        "* cheapest path\n",
+        "* path that is as fast and as cheap as possible"
+      ],
+      "metadata": {
+        "id": "pAtmyXllOlR2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Decomposition"
       ],
       "metadata": {
         "id": "VS7_k1uKuEDx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "NH17Uad4S8zB"
       }
     },
     {
@@ -344,10 +373,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "* Consder up-to-date fare prices\n",
+        "* Implement"
+      ],
+      "metadata": {
+        "id": "1XUAQkC2QDEx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Abstraction"
       ],
       "metadata": {
         "id": "V17tWmkMuEDx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* represent the bimodal transit network as a graph\n",
+        "* let the user decide if it prefers the:\n",
+        " * the fastest path\n",
+        " * the cheapest path\n",
+        " * a path that is as cheap and as fast as possible\n",
+        "* Use traversal techniques to generate a route based in user preference"
+      ],
+      "metadata": {
+        "id": "pZj1W4gFP0IQ"
       }
     },
     {
