--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPr8KoclkHvaWevKtHPxB3l",
+      "authorship_tag": "ABX9TyMymIxxnSVzu/1QrePyZwyY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,7 +276,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* longer routes (in terms of time) = higher fares\n",
+        "* longer routes  = higher fares\n",
         "* more stops = longer travel time\n",
         "* some routes have faster travel time, despite more stops\n",
         "* some routes are cheaper, but takes longer\n",
@@ -356,9 +356,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Interpret the bimodal transit system as a graph, where:\n",
+        "* nodes = bus stops/train stations\n",
+        "* edges = connections/transfer points\n",
+        "* weights = travel time and fare cost\n"
+      ],
       "metadata": {
         "id": "NH17Uad4S8zB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implement graph search algorithms to determine shortest path in terms of time or cost\n"
+      ],
+      "metadata": {
+        "id": "r8i_-S1UZW6z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implement graph search algorithms by weighted scoring for a route that is as fast and as cheap as possible"
+      ],
+      "metadata": {
+        "id": "r3i7oEbIZfhT"
       }
     },
     {
@@ -373,8 +396,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Consder up-to-date fare prices\n",
-        "* Implement"
+        "* fastest route may cost more\n",
+        "* cheapest route may take longer\n",
+        "* balanced route is both efficient and cost-effective"
       ],
       "metadata": {
         "id": "1XUAQkC2QDEx"
