--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJT6dwQctWoDw8WKVFrhNQ",
+      "authorship_tag": "ABX9TyPT611PUhnoc8SeYGNdiXow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,11 +82,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Bimodal Transit Integration of Bus and Train Systems in Metro Manila\n",
+        "### Bimodal Transit Integration of Bus and Train Systems through Quezon City\n",
         "\n",
         "\n",
-        "*   Organizing public transport systems in Metro Manila is crucial in fostering a commuter-friendly experience, which can have great ramifications in solving traffic congestion in the region's roads.\n",
-        "\n",
+        "*   Organizing public transport systems that pass through Quezon City is crucial in fostering a commuter-friendly experience, which can have great ramifications in solving traffic congestion in the city's roads.\n",
+        "* Notable roads and highways that pass through Quezon City include Commonwealth Avenue, EDSA, and Aurora boulevard.\n",
         "\n"
       ],
       "metadata": {
@@ -500,7 +500,7 @@
         },
         "outputId": "46b1ca00-d4e5-4b41-ae1a-bd17eecbbd5a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,12 +540,27 @@
         "    \"Magallanes\": [(\"Ayala\", 3), (\"Taft Avenue\", 2)],\n",
         "    \"Taft Avenue\": [(\"Magallanes\", 2)]\n",
         "}\n",
-        "\n"
+        "\n",
+        "graph_lrt2 = {\n",
+        "    \"Recto\": [(\"Legarda\", 3)],\n",
+        "    \"Legarda\": [(\"Recto\", 3), (\"Pureza\", 2)],\n",
+        "    \"Pureza\": [(\"Legarda\", 2), (\"V. Mapa\", 2)],\n",
+        "    \"V. Mapa\": [(\"Legarda\", 2), (\"J. Ruiz\", 2)],\n",
+        "    \"J. Ruiz\": [(\"V. Mapa\", 2), (\"Gilmore\", 3)],\n",
+        "    \"Gilmore\": [(\"J. Ruiz\", 3), (\"Betty Go-Belmonte\", 2)],\n",
+        "    \"Betty Go-Belmonte\": [(\"Gilmore\", 2), (\"Araneta-Cubao\", 2)],\n",
+        "    \"Araneta-Cubao\": [(\"Betty Go-Belmonte\", 2), (\"Anonas\", 3)],\n",
+        "    \"Anonas\": [(\"Araneta-Cubao\", 3), (\"Katipunan\", 2)],\n",
+        "    \"Katipunan\": [(\"Anonas\", 2), (\"Santolan\", 2)],\n",
+        "    \"Santolan\": [(\"Katipunan\", 2), (\"Marikina-Pasig\", 3)],\n",
+        "    \"Marikina-Pasig\": [(\"Santolan\", 3), (\"Antipolo\", 2)],\n",
+        "    \"Antipolo\": [(\"Marikina-Pasig\", 2)]\n",
+        "}"
       ],
       "metadata": {
         "id": "4WkwG73iHSKG"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +594,7 @@
           "height": 659
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
