--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT611PUhnoc8SeYGNdiXow",
+      "authorship_tag": "ABX9TyOVmZVOZnH7ROYQezLzjuFz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -555,7 +555,51 @@
         "    \"Santolan\": [(\"Katipunan\", 2), (\"Marikina-Pasig\", 3)],\n",
         "    \"Marikina-Pasig\": [(\"Santolan\", 3), (\"Antipolo\", 2)],\n",
         "    \"Antipolo\": [(\"Marikina-Pasig\", 2)]\n",
-        "}"
+        "}\n",
+        "\n",
+        "graph_edsabus = {\n",
+        "    \"Monumento\": [(\"Bagong Barrio\", 3)],\n",
+        "    \"Bagong Barrio\": [(\"Monumento\", 3), (\"Balintawak\", 3)],\n",
+        "    \"Balintawak\": [(\"Bagong Barrio\", 3), (\"Kaingin Road\", 2)],\n",
+        "    \"Kaingin Road\": [(\"Balintawak\", 2), (\"Roosevelt\", 2)],\n",
+        "    \"Roosevelt\": [(\"Kaingin Road\", 2), (\"North Avenue\", 3)],\n",
+        "    \"North Avenue\": [(\"Roosevelt\", 3), (\"Quezon Avenue\", 2)],\n",
+        "    \"Quezon Avenue\": [(\"North Avenue\", 2), (\"Mega Q-Mart\", 2)],\n",
+        "    \"Mega Q-Mart\": [(\"Quezon Avenue\", 2), (\"Main Avenue\", 3)],\n",
+        "    \"Main Avenue\": [(\"Mega Q-Mart\", 3), (\"Santolan\", 2)],\n",
+        "    \"Santolan\": [(\"Main Avenue\", 2), (\"Ortigas\", 2)],\n",
+        "    \"Ortigas\": [(\"Santolan\", 2), (\"Guadalupe\", 3)],\n",
+        "    \"Guadalupe\": [(\"Ortigas\", 3), (\"Buendia\", 2)],\n",
+        "    \"Buendia\": [(\"Guadalupe\", 2), (\"Ayala\", 2)],\n",
+        "    \"Ayala\": [(\"Buendia\", 2), (\"Tramo\", 3)],\n",
+        "    \"Tramo\": [(\"Ayala\", 3), (\"Taft Avenue\", 2)],\n",
+        "    \"Taft Avenue\": [(\"Tramo\", 2), (\"Roxas Boulevard\", 2)],\n",
+        "    \"Roxas Boulevard\": [(\"Taft Avenue\", 2), (\"SM MOA\", 2)],\n",
+        "    \"SM MOA\": [(\"Roxas Boulevard\", 2), (\"Macapagal-Bradco Avenue\", 2)],\n",
+        "    \"Macapagal-Bradco Avenue\": [(\"SM MOA\", 2), (\"City of Dreams\", 2)],\n",
+        "    \"City of Dreams\": [(\"Macapagal-Bradco Avenue\", 2), (\"Ayala Malls Manila Bay\", 2)],\n",
+        "    \"Ayala Malls Manila Bay\": [(\"City of Dreams\", 2), (\"PITX Terminal\", 2)],\n",
+        "    \"PITX Terminal\": [(\"Ayala Malls Manila Bay\", 2)]\n",
+        "}\n",
+        "\n",
+        "graph_bus9 = {\n",
+        "    \"Cubao\": [(\"15th Avenue\", 3)],\n",
+        "    \"15th Avenue\": [(\"Cubao\", 3), (\"Anonas\", 3)],\n",
+        "    \"Anonas\": [(\"15th Avenue\", 3), (\"Katipunan\", 2)],\n",
+        "    \"Katipunan\": [(\"Anonas\", 2), (\"SM Marikina\", 3)],\n",
+        "    \"SM Marikina\": [(\"Katipunan\", 3), (\"Ligaya\", 2)],\n",
+        "    \"Ligaya\": [(\"SM Marikina\", 2), (\"Sta. Lucia Grandmall\", 2)],\n",
+        "    \"Sta. Lucia Grandmall\": [(\"Ligaya\", 2), (\"Filinvest\", 3)],\n",
+        "    \"Filinvest\": [(\"Sta. Lucia Grandmall\", 3), (\"Masinag\", 2)],\n",
+        "    \"Masinag\": [(\"Filinvest\", 2), (\"Kingsville\", 2)],\n",
+        "    \"Kingsville\": [(\"Masinag\", 2), (\"Xentro Mall\", 3)],\n",
+        "    \"Xentro Mall\": [(\"Kingsville\", 3), (\"FUMC\", 2)],\n",
+        "    \"FUMC\": [(\"Xentro Mall\", 2), (\"La Montana\", 2)],\n",
+        "    \"La Montana\": [(\"FUMC\", 2), (\"Senora Dela Paz\", 3)],\n",
+        "    \"Senora Dela Paz\": [(\"La Montana\", 3), (\"Olalia\", 2)],\n",
+        "    \"Olalia\": [(\"Senora Dela Paz\", 2), (\"Antipolo\", 2)],\n",
+        "    \"Antipolo\": [(\"Olalia\", 2)]\n",
+        "}\n"
       ],
       "metadata": {
         "id": "4WkwG73iHSKG"
