--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVmZVOZnH7ROYQezLzjuFz",
+      "authorship_tag": "ABX9TyPrBf7u5M7j3DDq0cwXQ2xy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -582,6 +582,62 @@
         "    \"PITX Terminal\": [(\"Ayala Malls Manila Bay\", 2)]\n",
         "}\n",
         "\n",
+        "graph_bus5 = {\n",
+        "    \"Angat\": [(\"Norzagaray\", 3)],\n",
+        "    \"Norzagaray\": [(\"Angat\", 3), (\"Nodado General Hospital\", 2)],\n",
+        "    \"Nodado General Hospital\": [(\"Norzagaray\", 2), (\"San Jose del Monte\", 2)],\n",
+        "    \"San Jose del Monte\": [(\"Nodado General Hospital\", 2), (\"Francisco Homes\", 2)],\n",
+        "    \"Francisco Homes\": [(\"San Jose del Monte\", 2), (\"Gumaoc\", 3)],\n",
+        "    \"Gumaoc\": [(\"Francisco Homes\", 3), (\"Grotto\", 2)],\n",
+        "    \"Grotto\": [(\"Gumaoc\", 2), (\"SM City SJDM\", 2)],\n",
+        "    \"SM City SJDM\": [(\"Grotto\", 2), (\"Malaria\", 3)],\n",
+        "    \"Malaria\": [(\"SM City SJDM\", 3), (\"Pangarap\", 2)],\n",
+        "    \"Pangarap\": [(\"Malaria\", 2), (\"Amparo\", 2)],\n",
+        "    \"Amparo\": [(\"Pangarap\", 2), (\"Lagro\", 3)],\n",
+        "    \"Lagro\": [(\"Amparo\", 3), (\"SM Fairview\", 2)],\n",
+        "    \"SM Fairview\": [(\"Lagro\", 2), (\"Mindanao Ave\", 2)],\n",
+        "    \"Mindanao Ave\": [(\"SM Fairview\", 2), (\"Atherton\", 3)],\n",
+        "    \"Atherton\": [(\"Mindanao Ave\", 3), (\"FCM\", 2)],\n",
+        "    \"FCM\": [(\"Atherton\", 2), (\"Pearl Drive\", 2)],\n",
+        "    \"Pearl Drive\": [(\"FCM\", 2), (\"Litex\", 3)],\n",
+        "    \"Litex\": [(\"Pearl Drive\", 3), (\"Manggahan\", 2)],\n",
+        "    \"Manggahan\": [(\"Litex\", 2), (\"COA\", 2)],\n",
+        "    \"COA\": [(\"Manggahan\", 2), (\"Batasan\", 3)],\n",
+        "    \"Batasan\": [(\"COA\", 3), (\"Ever Gotesco\", 2)],\n",
+        "    \"Ever Gotesco\": [(\"Batasan\", 2), (\"Diliman Doctors\", 2)],\n",
+        "    \"Diliman Doctors\": [(\"Ever Gotesco\", 2), (\"Tandang Sora\", 3)],\n",
+        "    \"Tandang Sora\": [(\"Diliman Doctors\", 3), (\"Central Ave\", 2)],\n",
+        "    \"Central Ave\": [(\"Tandang Sora\", 2), (\"Technohub\", 2)],\n",
+        "    \"Technohub\": [(\"Central Ave\", 2), (\"Philcoa\", 3)],\n",
+        "    \"Philcoa\": [(\"Technohub\", 3), (\"LCP\", 2)],\n",
+        "    \"LCP\": [(\"Philcoa\", 2)]\n",
+        "}\n",
+        "\n",
+        "graph_bus7 = {\n",
+        "    \"Montalban\": [(\"Geronimo\", 3)],\n",
+        "    \"Geronimo\": [(\"Montalban\", 3), (\"Montaña\", 2)],\n",
+        "    \"Montaña\": [(\"Geronimo\", 2), (\"Maly\", 2)],\n",
+        "    \"Maly\": [(\"Montaña\", 2), (\"Dulong Bayan\", 3)],\n",
+        "    \"Dulong Bayan\": [(\"Maly\", 3), (\"San Mateo Bayan\", 2)],\n",
+        "    \"San Mateo Bayan\": [(\"Dulong Bayan\", 2), (\"San Mateo Doctors Hospital\", 2)],\n",
+        "    \"San Mateo Doctors Hospital\": [(\"San Mateo Bayan\", 2), (\"Ampid\", 3)],\n",
+        "    \"Ampid\": [(\"San Mateo Doctors Hospital\", 3), (\"Northview\", 2)],\n",
+        "    \"Northview\": [(\"Ampid\", 2), (\"Filinvest 2\", 2)],\n",
+        "    \"Filinvest 2\": [(\"Northview\", 2), (\"Kasiyahan\", 3)],\n",
+        "    \"Kasiyahan\": [(\"Filinvest 2\", 3), (\"Batasan\", 2)],\n",
+        "    \"Batasan\": [(\"Kasiyahan\", 2), (\"Ever Gotesco\", 2)],\n",
+        "    \"Ever Gotesco\": [(\"Batasan\", 2), (\"Diliman Doctors\", 3)],\n",
+        "    \"Diliman Doctors\": [(\"Ever Gotesco\", 3), (\"Tandang Sora\", 2)],\n",
+        "    \"Tandang Sora\": [(\"Diliman Doctors\", 2), (\"Central Ave\", 2)],\n",
+        "    \"Central Ave\": [(\"Tandang Sora\", 2), (\"Technohub\", 3)],\n",
+        "    \"Technohub\": [(\"Central Ave\", 3), (\"Philcoa\", 2)],\n",
+        "    \"Philcoa\": [(\"Technohub\", 2), (\"LCP\", 2)],\n",
+        "    \"LCP\": [(\"Philcoa\", 2), (\"NKTJ\", 3)],\n",
+        "    \"NKTJ\": [(\"LCP\", 3), (\"EAMC\", 2)],\n",
+        "    \"EAMC\": [(\"NKTJ\", 2), (\"V.Luna\", 2)],\n",
+        "    \"V.Luna\": [(\"EAMC\", 2)]\n",
+        "}\n",
+        "\n",
         "graph_bus9 = {\n",
         "    \"Cubao\": [(\"15th Avenue\", 3)],\n",
         "    \"15th Avenue\": [(\"Cubao\", 3), (\"Anonas\", 3)],\n",
@@ -599,6 +655,28 @@
         "    \"Senora Dela Paz\": [(\"La Montana\", 3), (\"Olalia\", 2)],\n",
         "    \"Olalia\": [(\"Senora Dela Paz\", 2), (\"Antipolo\", 2)],\n",
         "    \"Antipolo\": [(\"Olalia\", 2)]\n",
+        "}\n",
+        "\n",
+        "graph_bus11 = {\n",
+        "    \"Taytay\": [(\"E.Rod\", 3)],\n",
+        "    \"E.Rod\": [(\"Taytay\", 3), (\"Tuazon Ave\", 2)],\n",
+        "    \"Tuazon Ave\": [(\"E.Rod\", 2), (\"Sunset\", 2)],\n",
+        "    \"Sunset\": [(\"Tuazon Ave\", 2), (\"Brookside\", 3)],\n",
+        "    \"Brookside\": [(\"Sunset\", 3), (\"Robinsons Cainta\", 2)],\n",
+        "    \"Robinsons Cainta\": [(\"Brookside\", 2), (\"SM East Ortigas\", 2)],\n",
+        "    \"SM East Ortigas\": [(\"Robinsons Cainta\", 2), (\"Lucky Gold\", 3)],\n",
+        "    \"Lucky Gold\": [(\"SM East Ortigas\", 3), (\"Rosario\", 2)],\n",
+        "    \"Rosario\": [(\"Lucky Gold\", 2), (\"C-5 Ortigas\", 2)],\n",
+        "    \"C-5 Ortigas\": [(\"Rosario\", 2), (\"Frontera\", 3)],\n",
+        "    \"Frontera\": [(\"C-5 Ortigas\", 3), (\"Medical City\", 2)],\n",
+        "    \"Medical City\": [(\"Frontera\", 2), (\"Emerald\", 2)],\n",
+        "    \"Emerald\": [(\"Medical City\", 2), (\"EDSA Ortigas\", 3)],\n",
+        "    \"EDSA Ortigas\": [(\"Emerald\", 3), (\"Columbia\", 2)],\n",
+        "    \"Columbia\": [(\"EDSA Ortigas\", 2), (\"Greenhills\", 2)],\n",
+        "    \"Greenhills\": [(\"Columbia\", 2), (\"Roosevelt\", 3)],\n",
+        "    \"Roosevelt\": [(\"Greenhills\", 3), (\"Bonny Serrano\", 2)],\n",
+        "    \"Bonny Serrano\": [(\"Roosevelt\", 2), (\"Gilmore\", 2)],\n",
+        "    \"Gilmore\": [(\"Bonny Serrano\", 2)]\n",
         "}\n"
       ],
       "metadata": {
