--- a/Midterm/03272025/Exercise3.ipynb
+++ b/Midterm/03272025/Exercise3.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2e1be3f3-7b18-4847-9863-700341679314",
+   "metadata": {},
+   "source": [
+    "Github: https://github.com/KenPascual/CPE311_Computational-Thinking-with-Python/blob/main/Midterm/03272025/Exercise3.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f0f79d49-1bd5-44dd-8c40-d7d09b72d685",
