--- a/Midterm/Seatwork 7.2.ipynb
+++ b/Midterm/Seatwork 7.2.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3036f0da-8cff-4545-80c7-e0bfb342ef6d",
+   "cell_type": "markdown",
+   "id": "9323713e-6e34-4403-bbe9-e982b14c2b5e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[Github]("
+    "[Github](https://github.com/KenPascual/CPE311_Computational-Thinking-with-Python/blob/main/Midterm/Seatwork%207.2.ipynb)"
    ]
   },
   {
@@ -424,38 +422,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ac616b73-dcd1-48c2-8dc3-ed04c89c8960",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51241c9-a71a-4b65-b5c5-4d773c251b6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ec05f5f-aac1-4259-83ab-4ac1d3a5ce6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77858069-cb40-4b14-b25f-3d2b754eed84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff5b2e8c-e3bf-4ee4-9d8d-a05af5ac5236",
    "metadata": {},
    "outputs": [],
    "source": []
