--- a/Midterm/Seatwork 7.2.ipynb
+++ b/Midterm/Seatwork 7.2.ipynb
@@ -5,7 +5,7 @@
    "id": "9323713e-6e34-4403-bbe9-e982b14c2b5e",
    "metadata": {},
    "source": [
-    "[Here's the Github link for this notebook, since this is due for some changes (T_T)](https://github.com/KenPascual/CPE311_Computational-Thinking-with-Python/blob/main/Midterm/Seatwork%207.2.ipynb)"
+    "[Github link for this notebook(T_T)](https://github.com/KenPascual/CPE311_Computational-Thinking-with-Python/blob/main/Midterm/Seatwork%207.2.ipynb)"
    ]
   },
   {
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12ec5f3-10d6-4083-8863-a36fab8ea9fa",
+   "id": "f7cea7fc-b147-4809-b3c7-fbe9399eb247",
    "metadata": {},
    "outputs": [],
    "source": []
