--- a/Final/HOA12.1/HOA12.1_DoubleTap.ipynb
+++ b/Final/HOA12.1/HOA12.1_DoubleTap.ipynb
@@ -35,13 +35,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42ff350c-f906-4e75-bfcf-7f2f721ee3e5",
+   "cell_type": "markdown",
+   "id": "bc20fe09-7217-4d3e-a4f2-d5424610e651",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[Output and Presentation]("
+    "[Output and Presentation](https://github.com/KenPascual/CPE311_Computational-Thinking-with-Python/tree/1f9bf63fc857be8c1853df5e83f86b41b9ec3694/Final/HOA12.1)"
    ]
   }
  ],
