--- a/Final/Finals_Review/Hands-On-Data-Analysis-with-Pandas-2nd-edition-master/ch_02/1-pandas_data_structures.ipynb
+++ b/Final/Finals_Review/Hands-On-Data-Analysis-with-Pandas-2nd-edition-master/ch_02/1-pandas_data_structures.ipynb
@@ -16,33 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([('2018-10-13 11:10:23.560', '262km NW of Ozernovskiy, Russia', 'mww', 6.7, 'green', 1),\n",
-       "       ('2018-10-13 04:34:15.580', '25km E of Bitung, Indonesia', 'mww', 5.2, 'green', 0),\n",
-       "       ('2018-10-13 00:13:46.220', '42km WNW of Sola, Vanuatu', 'mww', 5.7, 'green', 0),\n",
-       "       ('2018-10-12 21:09:49.240', '13km E of Nueva Concepcion, Guatemala', 'mww', 5.7, 'green', 0),\n",
-       "       ('2018-10-12 02:52:03.620', '128km SE of Kimbe, Papua New Guinea', 'mww', 5.6, 'green', 1)],\n",
-       "      dtype=[('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i8')])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('2018-10-13 11:10:23.560', '262km NW of Ozernovskiy, Russia', 'mww', 6.7, 'green', 1)\n",
+      " ('2018-10-13 04:34:15.580', '25km E of Bitung, Indonesia', 'mww', 5.2, 'green', 0)\n",
+      " ('2018-10-13 00:13:46.220', '42km WNW of Sola, Vanuatu', 'mww', 5.7, 'green', 0)\n",
+      " ('2018-10-12 21:09:49.240', '13km E of Nueva Concepcion, Guatemala', 'mww', 5.7, 'green', 0)\n",
+      " ('2018-10-12 02:52:03.620', '128km SE of Kimbe, Papua New Guinea', 'mww', 5.6, 'green', 1)]\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
     "data = np.genfromtxt(\n",
-    "    'data/example_data.csv', delimiter=';', \n",
-    "    names=True, dtype=None, encoding='UTF'\n",
+    "    r'C:\\Users\\Leon Pascual\\Documents\\GitHub\\CPE311_Computational-Thinking-with-Python\\Final\\Finals_Review\\Hands-On-Data-Analysis-with-Pandas-2nd-edition-master\\ch_02\\data\\example_data.csv',\n",
+    "    delimiter=';',\n",
+    "    names=True,\n",
+    "    dtype=None,\n",
+    "    encoding='utf-8'  # fixed encoding\n",
     ")\n",
-    "data"
+    "print(data)\n"
    ]
   },
   {
@@ -1028,7 +1027,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1042,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
